--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@supabase/supabase-js": "2.13.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "0.7.1",
     "react-router-dom": "5.3.4",
-    "vite": "^4.3.0",
+    "vite": "^4.4.8",
     "vitest": "^0.34.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.6.2",
     "jsdom": "^22.1.0"
   }
 }
