--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@babel/preset-react": "^7.22.5",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@supabase/supabase-js": "2.13.0",
