--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/react": "^14.0.0",
     "@vitejs/plugin-react": "^4.0.4",
     "babel-jest": "^29.6.2",
+    "cypress": "^13.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
