--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
 
     steps:
     - uses: actions/checkout@v3
@@ -22,8 +22,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'  # Cambiado de 'npm' a 'yarn'
-    - name: Install dependencies with Yarn
-      run: yarn install  # Cambiado de npm a Yarn
     - name: Build
       run: yarn run build --if-present  # Ajustado para usar Yarn
     #- name: Test
