--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'  # Cambiado de 'npm' a 'yarn'
+    - name: Install dependencies with Yarn
+      run: yarn install --production
     - name: Build
       run: yarn run build --if-present  # Ajustado para usar Yarn
     #- name: Test
