--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Install dependencies with Yarn
       run: yarn install --production
     - name: Build
-      run: yarn run build --if-present  # Ajustado para usar Yarn
+      run: yarn run build
     #- name: Test
      # run: yarn test  # Ajustado para usar Yarn
