--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "@pulumi/pulumi": "^3.90.1",
     "@supabase/supabase-js": "2.13.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.6.2",
