--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.13.2",
     "@pulumi/pulumi": "^3.90.1",
     "@supabase/supabase-js": "2.13.0",
+    "bcryptjs": "^2.4.3",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.6.2",
     "react": "^18.2.0",
