--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "0.7.1",
     "react-router-dom": "5.3.4",
+    "react-toastify": "^9.1.3",
     "vite": "^4.4.8",
     "vitest": "^0.34.1"
   },
